--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "connect-pg-simple": "^9.0.1",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "express-session": "^1.18.0",
     "moment": "^2.30.1",
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.4",
     "redux": "^4.1.2",
