--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "bootstrap": "^5.3.3",
     "connect-pg-simple": "^9.0.1",
     "dotenv": "^16.0.3",
+    "emailjs-com": "^3.2.0",
     "express": "^4.17.1",
     "express-session": "^1.18.0",
+    "jspdf": "^2.5.2",
     "moment": "^2.30.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
