--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect-pg-simple": "^9.0.1",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
+    "exceljs": "^4.4.0",
     "express": "^4.17.1",
     "express-session": "^1.18.0",
     "jspdf": "^2.5.2",
