--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "cloudinary": "^2.5.1",
     "connect-pg-simple": "^9.0.1",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
